@@ -4,6 +4,9 @@
 
 opts="save"
 
+description="Sets the local clock to UTC or Local Time." 
+description_save="Saves the current time in the BIOS."
+
 depend() {
 	# BSD adjkerntz needs to be able to write to /etc
 	if [ "${CLOCK}" = "UTC" -a -e /etc/wall_cmos_clock ] ||
