@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+description="Check the root filesystem according to /etc/fstab for errors \
+and optionally repair them."
+
 do_mtab() {
 	# Don't create mtab if /etc is readonly
 	if ! touch /etc/mtab 2> /dev/null ; then
