@@ -2,6 +2,8 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+description="Mounts network shares according to /etc/fstab."
+
 have_nfs() {
 	local IFS=\n x=
 	set -- $(fstabinfo --fstype nfs,nfs4)
