@@ -84,8 +84,10 @@ librc_hidden_proto(rc_schedule_start_service)
 librc_hidden_proto(rc_service_add)
 librc_hidden_proto(rc_service_daemons_crashed)
 librc_hidden_proto(rc_service_delete)
+librc_hidden_proto(rc_service_description)
 librc_hidden_proto(rc_service_exists)
 librc_hidden_proto(rc_service_in_runlevel)
+librc_hidden_proto(rc_service_options)
 librc_hidden_proto(rc_services_in_runlevel)
 librc_hidden_proto(rc_services_in_state)
 librc_hidden_proto(rc_services_scheduled)
