@@ -3,6 +3,7 @@
 
   10 Jul 2007; Roy Marples <uberlord@gentoo.org>:
 
+    init scripts and their extra options can now have descriptions, #184327.
     We no longer care about numerical runlevels, #184733.
 
   09 Jul 2007; Roy Marples <uberlord@gentoo.org>:
